# binary-demo

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
notebooks/: test.ipynb
src/binary_demo/: __main__.py  util.py
tests/: test_basic.py
