[project]
name = "binary-demo"
version = "0.1.0"
description = "Python package distribution with binary extensions"
authors = [
    {name = "Jiri Klic", email = "web@jiriklic.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "geopandas>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.2.3",
]
