[project]
name = "binary-demo"
version = "0.1.0"
description = "Python package distribution with binary extensions"
authors = [
    {name = "Jiri Klic", email = "web@jiriklic.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "geopandas>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


[build-system]
requires = ["scikit-build-core>=0.9.8", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
build-frontend = "build"
test-command = "pytest {project}/tests"
test-extras = ["test"]

[tool.cibuildwheel.pyodide]
environment.CFLAGS = "-fexceptions"
environment.LDFLAGS = "-fexceptions"
build-frontend = {name = "build", args = ["--exports", "whole_archive"]}



[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.2.3",
]
